fix: cursor follows typed text position via inline-block wrap

--- a/src/components/TextType.css
+++ b/src/components/TextType.css
@@ -4,7 +4,6 @@
 }
 
 .text-type__cursor {
-  margin-left: 0.25rem;
   display: inline-block;
   opacity: 1;
 }
